# fae_platform

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/20250812-114902/: analysis_report.md  clarifications.json  findings.json  policy.json  requirements.json
artifacts/20250813-202825/: analysis_report.md  clarifications.json  findings.json  policy.json  requirements.json
src/requirements_crew/: agents.py  llm.py  models.py  orchestrator.py  tasks.py
src/requirements_crew/schema/: policy.schema.json  requirements.schema.json
tests/: test_pipeline.py
